# loopkit

./: .gitignore  .loopkit.yaml  AGENTS.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml
crates/loopkit/: Cargo.toml  README.md
crates/loopkit-core/: Cargo.toml  README.md
crates/loopkit-core/src/: config.rs  diagnostic.rs  discovery.rs  lib.rs  state_name.rs  types.rs
crates/loopkit-core/src/parser/: mod.rs  skill.rs  yaml.rs
crates/loopkit-graph/: Cargo.toml  README.md
crates/loopkit-graph/src/: graph.rs  lib.rs  types.rs
crates/loopkit-graph/src/parser/: handoff.rs  loop_.rs  mod.rs
crates/loopkit-graph/src/simulation/: mod.rs
crates/loopkit-graph/src/validators/: bug_feedback.rs  constraints.rs  cross_references.rs  deskcheck.rs  enforced_states.rs  graph.rs  loop_completeness.rs  loop_language.rs  loop_sections.rs  loop_state_files.rs  mod.rs  state_consistency.rs
crates/loopkit/src/: main.rs
crates/loopkit/src/best_practices/: anti_patterns.rs  frontmatter.rs  mod.rs  naming.rs  progressive.rs  scripts.rs  structure.rs  terminology.rs  workflow.rs
crates/loopkit/tests/: acceptance_tests.rs
docs/: config-reference.md  loop-language.md
docs/superpowers/plans/: 2026-06-24-loopkit-implementation.md
docs/superpowers/specs/: 2026-06-24-loopkit-design.md  2026-06-24-skill-typechecker-design.md
examples/test-fixture/: .loopkit.yaml
examples/test-fixture/skills/development/running-tdd-loops/: LOOP.md  SKILL.md
examples/test-fixture/skills/meta/broken-helper/: LOOP.md  SKILL.md
npm/: README.md  bin.js  package.json  postinstall.js
src/: config.rs  diagnostic.rs  generator.rs  lib.rs  main.rs  repo.rs  types.rs
src/parser/: handoff.rs  loop_.rs  mod.rs  skill.rs  yaml.rs
src/simulation/: mod.rs
src/validators/: constraints.rs  cross_references.rs  graph.rs  loop_language.rs  loop_sections.rs  loop_state_files.rs  mod.rs  skill_completeness.rs  state_consistency.rs
tests/: cli_integration_tests.rs  config_tests.rs  diagnostic_tests.rs  edge_case_tests.rs  generator_tests.rs  integration_tests.rs  parsing_tests.rs  validator_tests.rs  vocabulary_tests.rs
tests/common/: mod.rs
theories/: Extraction.v  Paths.v  Properties.v  Transitions.v
