[package]
name = "loopkit"
version = "0.3.0"
edition = "2021"
description = "Prove your agent skill loops are correct — state machine verification, enforced vocabulary, and Claude best-practices compliance"

[dependencies]
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.13"
regex = "1.10"
walkdir = "2.5"
thiserror = "2.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
