[package]
name = "loopkit-core"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Core types, config, and parser for the Loop Language compiler"
repository = "https://github.com/loopworx/loopkit"
homepage = "https://github.com/loopworx/loopkit"
readme = "README.md"

[dependencies]
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.13"
regex = "1.10"
walkdir = "2.5"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
