[package]
name = "loopkit-graph"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Graph validators and state-machine simulation for the Loop Language compiler"
repository = "https://github.com/loopworx/loopkit"
homepage = "https://github.com/loopworx/loopkit"
readme = "README.md"

[dependencies]
loopkit-core = { path = "../loopkit-core", version = "0.3.1" }
lazy_static = "1.4"
pulldown-cmark = "0.13"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
