[package]
name = "loopkit"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "The Loop Language compiler — validates skill repositories against the Loop Language spec"
repository = "https://github.com/loopworx/loopkit"
homepage = "https://github.com/loopworx/loopkit"
readme = "README.md"

[[bin]]
name = "loopkit"
path = "src/main.rs"

[dependencies]
loopkit-core = { path = "../loopkit-core", version = "0.3.2" }
loopkit-graph = { path = "../loopkit-graph", version = "0.3.2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
loopkit-core = { path = "../loopkit-core" }
loopkit-graph = { path = "../loopkit-graph" }
tempfile = "3.10"
serde_json = "1.0"
